# vanilla

./: LICENSE  README.md  config.h.in  meson.build  meson_options.txt  secded.h
log/: log.c  log.h
test/: meson.build  test_log.c  test_secded.c
vanilla/: log.h  meson.build  secded.h  test.h  vt100.h
